--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,17 @@ header{
     display: flex;
     flex-direction: column;
 }
+.a-sec-2{
+    color: #914242;
+    margin-top: 10px;
+}
+.a-icon{
+    color: white;
+    font-size: 23px;
+}
+.p-icon{
+    color: #914242;
+}
 .tittles{
     margin: 30px 0 0 0;
     color: white;
@@ -129,6 +140,27 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.a-sec-3{
+    color: #0d3315;
+    margin-top: 10px;
+    font-size: 18px;
+}
+.name-sec-3{
+    color: #6cc372;
+    margin-top: 15px;
+    font-size: 20px;
+}
+.senior{
+    color: #b4534b;
+    margin-top: 15px;
+}
+.b-class{
+    color: white;
+    font-size: 22px;
+}
+.img-b-class{
+    margin-left: 7px;
 }
 .img-profile{
     width: 100%;
@@ -170,13 +202,25 @@ header{
 /* section 4 */
 .section-4{
     width: auto;
-    height: 600px;
+    height: 540px;
     background-color: #f0f0f0;
 }
 .sec4{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.a-color-sec4{
+    color: #626262;
+}
+.a-inf-sec4{
+    color: #6bc573; 
+    margin-top: 10px; 
+    font-size: 18px;
+}
+.a-img-msj{
+    font-size: 20px; 
+    color: #252525;
 }
 .img-sec-4{
     width: 100%;
@@ -225,4 +269,233 @@ header{
 }
 .arrow1{
     margin-right: -80px;
+}
+
+/* section 5 */
+.section-5{
+   width: auto; 
+   height: 360px;
+   background-color: white;
+}
+.sec5{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+.header-sec-5{
+    margin-top: -10px;
+    margin-bottom: -10px;
+    text-align: center;
+    height: 110px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+.header-midd{
+    margin-top: -48px;
+    height: 150px;
+}
+.sett{
+    z-index: 1;
+    margin-top: 20px;
+}
+.tittle-sec-5{
+    margin-top: 10px;
+    font-size: 35px;
+    color: #616161;
+}
+.sub-t{
+    margin-top: 6px;
+    color: #eb504d;
+}
+.offer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.offer-1{
+    width: 300px;
+    height: 400px;
+    margin-top: -106px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.foo-sec-5{
+    margin-top: -30px;
+    width: auto;
+    height: 75px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #616161;
+}
+.table-sec-5{
+    margin-top: -55px;
+    margin-bottom: -20px;
+}
+.table-2{
+    margin-top: -60px;
+    margin-bottom: -20px;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+    background-color:#f0f0f0;
+}
+td{
+    color: #606060;
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    text-align: center;
+    padding: 15px;
+}
+.price{
+    color: white;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+.foo-sec-52{
+    background-color: #eb504d;
+}
+.cash{
+    font-size: 23px;
+    margin-top: -15px;
+    margin-right: 5px;
+}
+.cash-div{
+    margin-top: 25px;
+    display: flex;
+    align-self: flex-start;
+}
+.number{
+    font-size: 48px;
+}
+.coin{
+    font-size: 20px;
+}
+.button-sec-5{
+    margin-right: 10px;
+    width: 80px;
+    height: 30px;
+    color: #616161;
+    background-color: white;
+    font-size: 17px;
+    border-radius: 3px;
+}
+.text-sec-5{
+    margin-top: 20px;
+    text-align: center;
+    color: #eb504d;
+}
+.a-standard{
+    color: #eb504d;
+}
+.sub-2{
+    color: #616161;
+}
+.order-pink{
+    color: #eb504d;
+}
+
+/* section 6 */
+
+.section-6{
+    width: auto;
+    height: 280px;
+    background-color: #eb504d;
+}
+.sec6{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.tittle-sec-6{
+    text-align: center;
+}
+.a-inf-sec-6{
+    color: #42161d; 
+    margin-top: 10px; 
+    font-size: 18px;
+}
+.icons-sec-6{
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.lr-arrow{
+    margin-left: -70px;
+}
+.lr-arrow1{
+    margin-right: -70px;
+}
+.info-sec-6{
+    margin-top: 20px;
+}
+.vin{
+    color: #4e0806;
+}
+.white{
+    color: white;
+}
+.p-sec-6{
+    font-size: 18.5px;
+}
+
+/* section-7 */
+.section-7{
+    width: auto;
+    background-color: black;
+}
+.sec7{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between
+}
+.motion-t{
+    color: #eb504d;
+}
+
+/*  footer  */
+
+.foo-sec{
+    width: auto;
+    background-image: url("../images/map.png");
+}
+.info-foo{
+    width: 450px;
+    height: 125px;
+    border-radius: 3px;
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.opacity{
+    background-color:rgb(31, 29, 29);
+   opacity:0.8;
+}
+.map{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contact-us{
+    color: white;
+    font-size: 23px;
+}
+.inf-foo{
+    color: #eb504d;
 }
