--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body{
     margin: 0;
     padding: 0;
 	height: auto;
-	font-family: sans-serif;
+    font-family: sans-serif;
+    background-color: #eb504d;
 }
 
 button{
@@ -18,10 +19,12 @@ button{
 	background-color: transparent;
 }
 
+
 /*header*/
 header{
     width: auto;
     background-color: #f56162;
+    /*clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 54%, 96% 0);*/
 }
 .header-sec{
     display: flex;
@@ -31,6 +34,78 @@ header{
 }
 .logo{
     margin-top: 10px;
+}
+.square{
+    margin: -42px -316px 0 0;
+    width: 51px;
+    height: 50px;
+    background-color: #fb8b8c;
+    border-bottom-left-radius: 5px;
+    z-index: 2;
+}
+/*
+.rombo {
+    width: 55px;
+    height: 56px;
+    border: 3px solid transparent;
+    background-color: rgb(191, 82, 82);
+    transform: rotate(41deg);
+    z-index: 1;
+    margin: 4px -197px 0 0;
+}*/
+.rombo2{
+    clip-path: polygon(0 0, 0 100%, 100% 100%, 96% 107%, 0% 0);
+    width: 47px;
+    height: 40px;
+    border: 3px solid transparent;
+    background-color: rgba(113, 47, 47, 0.5);
+    transform: rotate(180deg);
+    margin: -37px -1227px 0 0;
+    margin: -37px -1226px 0 0;
+}
+.box{
+    position: absolute;
+    top: 0;
+    right: 0px;
+    width: 60px;
+    height: 80px;
+    background-color: transparent;
+}
+.triangle-1{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 0px;
+    height: 0px;
+    border-right: 24px solid transparent;
+    border-top: 24px solid transparent;
+    border-left: 24px solid #eb504d;
+    border-bottom: 24px solid #eb504d;
+    transform: rotate(180deg);
+}
+.triangle-2{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 0px;
+    height: 0px;
+    border-right: 24px solid transparent;
+    border-top: 24px solid transparent;
+    border-left: 24px solid #fb8b8c;
+    border-bottom: 24px solid #fb8b8c;
+    border-bottom-left-radius: 3px;
+}
+.triangle-3{
+    position: absolute;
+    top: 48px;
+    right: -1px;
+    width: 0px;
+    height: 0px;
+    border-right: 24px solid transparent;
+    border-top: 24px solid transparent;
+    border-left: 24px solid  rgba(113, 47, 47, 0.5);
+    border-bottom: 24px solid  rgba(113, 47, 47, 0.5);;
+    transform: rotate(180deg);
 }
 .ul-1{
     list-style-type: none;
@@ -52,7 +127,7 @@ header{
 .section-1{
     width: auto;
     height: 550px;
-    background-color: #e24d4a;
+    background-color: #eb504d;
 }
 .sec1{
     display: flex;
